FIX: adjust 'all episodes' images on tablet/phone

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -273,7 +273,7 @@
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .allEpisodes td:nth-child(3),
   .allEpisodes th:nth-child(3),
   .allEpisodes td:nth-child(4),
